crates/kirin-derive-ir/src/snapshots/kirin_derive_ir__generate__tests__dialect_derive_struct_with_ssa_fields.snap
---
source: crates/kirin-derive-ir/src/generate.rs
expression: generate_dialect_code(input)
---
#[automatically_derived]
impl<'a> ::kirin::ir::HasArguments<'a> for BinaryOp {
    type Iter = BinaryOpArgumentsIter<'a>;
    fn arguments(&'a self) -> Self::Iter {
        let Self { result, lhs, rhs } = self;
        BinaryOpArgumentsIter {
            inner: std::iter::once(result),
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub struct BinaryOpArgumentsIter<'a> {
    inner: std::iter::Once<&'a ::kirin::ir::SSAValue>,
}
#[automatically_derived]
impl<'a> Iterator for BinaryOpArgumentsIter<'a> {
    type Item = &'a ::kirin::ir::SSAValue;
    fn next(&mut self) -> Option<Self::Item> {
        self.inner.next()
    }
}
#[automatically_derived]
impl<'a> ::kirin::ir::HasArgumentsMut<'a> for BinaryOp {
    type IterMut = BinaryOpArgumentsMutIter<'a>;
    fn arguments_mut(&'a mut self) -> Self::IterMut {
        let Self { result, lhs, rhs } = self;
        BinaryOpArgumentsMutIter {
            inner: std::iter::once(result),
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub struct BinaryOpArgumentsMutIter<'a> {
    inner: std::iter::Once<&'a mut ::kirin::ir::SSAValue>,
}
#[automatically_derived]
impl<'a> Iterator for BinaryOpArgumentsMutIter<'a> {
    type Item = &'a mut ::kirin::ir::SSAValue;
    fn next(&mut self) -> Option<Self::Item> {
        self.inner.next()
    }
}
#[automatically_derived]
impl<'a> ::kirin::ir::HasResults<'a> for BinaryOp {
    type Iter = BinaryOpResultsIter<'a>;
    fn results(&'a self) -> Self::Iter {
        let Self { result, lhs, rhs } = self;
        BinaryOpResultsIter {
            inner: std::iter::empty::<&'a ::kirin::ir::ResultValue>(),
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub struct BinaryOpResultsIter<'a> {
    inner: std::iter::Empty<&'a ::kirin::ir::ResultValue>,
}
#[automatically_derived]
impl<'a> Iterator for BinaryOpResultsIter<'a> {
    type Item = &'a ::kirin::ir::ResultValue;
    fn next(&mut self) -> Option<Self::Item> {
        self.inner.next()
    }
}
#[automatically_derived]
impl<'a> ::kirin::ir::HasResultsMut<'a> for BinaryOp {
    type IterMut = BinaryOpResultsMutIter<'a>;
    fn results_mut(&'a mut self) -> Self::IterMut {
        let Self { result, lhs, rhs } = self;
        BinaryOpResultsMutIter {
            inner: std::iter::empty::<&'a mut ::kirin::ir::ResultValue>(),
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub struct BinaryOpResultsMutIter<'a> {
    inner: std::iter::Empty<&'a mut ::kirin::ir::ResultValue>,
}
#[automatically_derived]
impl<'a> Iterator for BinaryOpResultsMutIter<'a> {
    type Item = &'a mut ::kirin::ir::ResultValue;
    fn next(&mut self) -> Option<Self::Item> {
        self.inner.next()
    }
}
#[automatically_derived]
impl<'a> ::kirin::ir::HasBlocks<'a> for BinaryOp {
    type Iter = BinaryOpBlocksIter<'a>;
    fn blocks(&'a self) -> Self::Iter {
        let Self { result, lhs, rhs } = self;
        BinaryOpBlocksIter {
            inner: std::iter::empty::<&'a ::kirin::ir::Block>(),
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub struct BinaryOpBlocksIter<'a> {
    inner: std::iter::Empty<&'a ::kirin::ir::Block>,
}
#[automatically_derived]
impl<'a> Iterator for BinaryOpBlocksIter<'a> {
    type Item = &'a ::kirin::ir::Block;
    fn next(&mut self) -> Option<Self::Item> {
        self.inner.next()
    }
}
#[automatically_derived]
impl<'a> ::kirin::ir::HasBlocksMut<'a> for BinaryOp {
    type IterMut = BinaryOpBlocksMutIter<'a>;
    fn blocks_mut(&'a mut self) -> Self::IterMut {
        let Self { result, lhs, rhs } = self;
        BinaryOpBlocksMutIter {
            inner: std::iter::empty::<&'a mut ::kirin::ir::Block>(),
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub struct BinaryOpBlocksMutIter<'a> {
    inner: std::iter::Empty<&'a mut ::kirin::ir::Block>,
}
#[automatically_derived]
impl<'a> Iterator for BinaryOpBlocksMutIter<'a> {
    type Item = &'a mut ::kirin::ir::Block;
    fn next(&mut self) -> Option<Self::Item> {
        self.inner.next()
    }
}
#[automatically_derived]
impl<'a> ::kirin::ir::HasSuccessors<'a> for BinaryOp {
    type Iter = BinaryOpSuccessorsIter<'a>;
    fn successors(&'a self) -> Self::Iter {
        let Self { result, lhs, rhs } = self;
        BinaryOpSuccessorsIter {
            inner: std::iter::empty::<&'a ::kirin::ir::Successor>(),
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub struct BinaryOpSuccessorsIter<'a> {
    inner: std::iter::Empty<&'a ::kirin::ir::Successor>,
}
#[automatically_derived]
impl<'a> Iterator for BinaryOpSuccessorsIter<'a> {
    type Item = &'a ::kirin::ir::Successor;
    fn next(&mut self) -> Option<Self::Item> {
        self.inner.next()
    }
}
#[automatically_derived]
impl<'a> ::kirin::ir::HasSuccessorsMut<'a> for BinaryOp {
    type IterMut = BinaryOpSuccessorsMutIter<'a>;
    fn successors_mut(&'a mut self) -> Self::IterMut {
        let Self { result, lhs, rhs } = self;
        BinaryOpSuccessorsMutIter {
            inner: std::iter::empty::<&'a mut ::kirin::ir::Successor>(),
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub struct BinaryOpSuccessorsMutIter<'a> {
    inner: std::iter::Empty<&'a mut ::kirin::ir::Successor>,
}
#[automatically_derived]
impl<'a> Iterator for BinaryOpSuccessorsMutIter<'a> {
    type Item = &'a mut ::kirin::ir::Successor;
    fn next(&mut self) -> Option<Self::Item> {
        self.inner.next()
    }
}
#[automatically_derived]
impl<'a> ::kirin::ir::HasRegions<'a> for BinaryOp {
    type Iter = BinaryOpRegionsIter<'a>;
    fn regions(&'a self) -> Self::Iter {
        let Self { result, lhs, rhs } = self;
        BinaryOpRegionsIter {
            inner: std::iter::empty::<&'a ::kirin::ir::Region>(),
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub struct BinaryOpRegionsIter<'a> {
    inner: std::iter::Empty<&'a ::kirin::ir::Region>,
}
#[automatically_derived]
impl<'a> Iterator for BinaryOpRegionsIter<'a> {
    type Item = &'a ::kirin::ir::Region;
    fn next(&mut self) -> Option<Self::Item> {
        self.inner.next()
    }
}
#[automatically_derived]
impl<'a> ::kirin::ir::HasRegionsMut<'a> for BinaryOp {
    type IterMut = BinaryOpRegionsMutIter<'a>;
    fn regions_mut(&'a mut self) -> Self::IterMut {
        let Self { result, lhs, rhs } = self;
        BinaryOpRegionsMutIter {
            inner: std::iter::empty::<&'a mut ::kirin::ir::Region>(),
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub struct BinaryOpRegionsMutIter<'a> {
    inner: std::iter::Empty<&'a mut ::kirin::ir::Region>,
}
#[automatically_derived]
impl<'a> Iterator for BinaryOpRegionsMutIter<'a> {
    type Item = &'a mut ::kirin::ir::Region;
    fn next(&mut self) -> Option<Self::Item> {
        self.inner.next()
    }
}
#[automatically_derived]
impl ::kirin::ir::IsTerminator for BinaryOp {
    fn is_terminator(&self) -> bool {
        false
    }
}
#[automatically_derived]
impl ::kirin::ir::IsConstant for BinaryOp {
    fn is_constant(&self) -> bool {
        false
    }
}
#[automatically_derived]
impl ::kirin::ir::IsPure for BinaryOp {
    fn is_pure(&self) -> bool {
        false
    }
}
#[automatically_derived]
impl ::kirin::ir::IsSpeculatable for BinaryOp {
    fn is_speculatable(&self) -> bool {
        false
    }
}
#[automatically_derived]
impl ::kirin::ir::Dialect for BinaryOp {
    type Type = SimpleType;
}
