crates/kirin-derive-ir/src/snapshots/kirin_derive_ir__generate__tests__stage_meta_single_dialect.snap
---
source: crates/kirin-derive-ir/src/generate.rs
expression: generate_stage_meta_code(input)
---
#[automatically_derived]
impl kirin_ir::HasStageInfo<ArithDialect> for SimpleStage {
    fn try_stage_info(&self) -> Option<&kirin_ir::StageInfo<ArithDialect>> {
        match self {
            SimpleStage::Arith(s) => Some(s),
        }
    }
    fn try_stage_info_mut(&mut self) -> Option<&mut kirin_ir::StageInfo<ArithDialect>> {
        match self {
            SimpleStage::Arith(s) => Some(s),
        }
    }
}
#[automatically_derived]
impl kirin_ir::StageMeta for SimpleStage {
    type Languages = (ArithDialect, ());
    fn stage_name(&self) -> Option<kirin_ir::GlobalSymbol> {
        match self {
            SimpleStage::Arith(s) => kirin_ir::StageMeta::stage_name(s),
        }
    }
    fn set_stage_name(&mut self, name: Option<kirin_ir::GlobalSymbol>) {
        match self {
            SimpleStage::Arith(s) => kirin_ir::StageMeta::set_stage_name(s, name),
        }
    }
    fn stage_id(&self) -> Option<kirin_ir::CompileStage> {
        match self {
            SimpleStage::Arith(s) => kirin_ir::StageMeta::stage_id(s),
        }
    }
    fn set_stage_id(&mut self, id: Option<kirin_ir::CompileStage>) {
        match self {
            SimpleStage::Arith(s) => kirin_ir::StageMeta::set_stage_id(s, id),
        }
    }
    fn from_stage_name(stage_name: &str) -> Result<Self, String> {
        match stage_name {
            "arith" => Ok(SimpleStage::Arith(
                kirin_ir::StageInfo::<ArithDialect>::default(),
            )),
            _ => Err(format!("no stage variant mapping for '@{}'", stage_name)),
        }
    }
    fn declared_stage_names() -> &'static [&'static str] {
        &["arith"]
    }
}
