crates/kirin-derive-ir/src/snapshots/kirin_derive_ir__generate__tests__standalone_is_edge.snap
---
source: crates/kirin-derive-ir/src/generate.rs
assertion_line: 776
expression: rustfmt(tokens.to_string())
---
#[automatically_derived]
impl ::kirin::ir::IsEdge for Wire {
    fn is_edge(&self) -> bool {
        true
    }
}
