crates/kirin-derive-ir/src/snapshots/kirin_derive_ir__generate__tests__standalone_is_terminator.snap
---
source: crates/kirin-derive-ir/src/generate.rs
expression: rustfmt(tokens.to_string())
---
#[automatically_derived]
impl ::kirin::ir::IsTerminator for Return {
    fn is_terminator(&self) -> bool {
        true
    }
}
